fix: use `overflow: auto` instead of `overflow: scroll` for windows

--- a/app/talkgacha/page.module.css
+++ b/app/talkgacha/page.module.css
@@ -25,7 +25,7 @@
 
 .suggestion {
   font-size: 24px;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .button {
